# Agentic_personal_porter

./: .antigravityignore  .cursorignore  .cursorrules  .dockerignore  .gcloudignore  .geminiignore  .gitignore  .gitmodules  .legacy_hr  Dockerfile  EXPECTED_LIMITATIONS.md  How_to_use_notes.txt  Known_issues_and_improvements.md  Makefile  README.md  app.js  audit_variable_names.sh  auth.py  batch_inject_intentions.py  build_rag_index.py  check_status.py  debug_path.py  deploy_gcp.sh  digest.txt  docker-compose.yml  environment.yml  google_cal_auth_helper.py  google_calendar_auth.py  google_calendar_authentication_helper.py  index.html  inventory.html  main.py  neo4j_db.py  package.json  plan.md  pyproject.toml  pytest.ini  rag_service.py  requirements.txt  run_production.sh  (+10 more)
.jules/: bolt.md  palette.md  sentinel.md
.legacy_hr/: SILAS_AUDIT_REPORT.md.legacy
Documentation/: BRANCH_CONFLICT_ANALYSIS.md  CALENDAR_ORCHESTRATION_ANALYSIS.md  CORE_FUNCTIONALITY_REVIEW.md  Completed_Tasks  DATA_LINEAGE_STRATEGY.md  DEPENDENCY_STABILIZATION_2026.md  FEATURE_BRANCH_SETUP.md  FLASK_APP_SAFETY_CHECKLIST.md  FRONTEND_AGENT_UI_REWORK.md  GITHUB_APP_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  ITERATION_FILES_ANALYSIS.md  Jan25_review_doc.md  MAY_2026_STATUS_REPORT.md  MODEL_AGENT_ADK_COMPARISON.md  PANEL2_README.md  PANEL3_README.md  PANEL3_VERIFICATION.md  PATH_UPDATES_COMPLETE.md  PROJECT_REORGANIZATION_PLAN.md  Porter_Project_Core_Functionality_and_Outstanding_Roadmap_2026_06.md  QUICK_START.md  ROADMAP_PHASE_2.md  SECURITY_REPORT.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TEST_RESULTS_PANEL2.md  Understanding_Semantic_Options.md  issues_and_audit  notes
data/: category_mapping.example.json  chunks_fast_semantic.json  chunks_fixed.json  (+3 more)
(+353 files in other folders)
