[project]
name = "agentic-personal-porter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.13.0",
    "arxiv>=2.1.3",
    "chromadb~=1.1.0",
    "click~=8.1.7",
    "fastapi==0.115.12",
    "flask>=3.0.0",
    "flask-cors>=6.0",
    "google-api-core>=2.30.1,<3.0.0",
    "google-api-python-client>=2.195.0,<3.0.0",
    "google-auth>=2.15.0,<3.0.0",
    "google-auth-oauthlib~=1.2.0",
    "google-cloud-aiplatform>=1.151.0",
    "googleapis-common-protos>=1.70.0,<2.0.0",
    "google-adk>=0.1.0",
    "gunicorn>=26.0.0",
    "httpx-sse==0.4.0",
    "importlib-metadata~=8.7.1 ; python_full_version == '3.11.*'",
    "jiter~=0.13.0",
    "jsonpatch~=1.33",
    "jsonpointer~=3.0",
    "langchain>=1.2.1",
    "langchain-core>=1.3.2",
    "langchain-google-vertexai>=1.0.5",
    "langchain-groq==1.1.2",
    "langchain-mongodb==0.11.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langsmith>=0.8.2",
    "neo4j>=5.14.0,<5.28.3",
    "numpy>=1.23.0,<2.0.0",
    "oauth2client>=4.1.3",
    "onnxruntime>=1.19.0",
    "openai==2.30.0",
    "protobuf>=6.0.0,<7.0.0",
    "pydantic~=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.6.1",
    "pymupdf~=1.26.6",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "rich==14.3.4",
    "sentence-transformers>=5.4.0",
    "starlette>=0.46.0",
    "tenacity>=9.1.4",
    "tomli~=2.0.2",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "typer~=0.9.0",
    "urllib3>=2.7.0",
    "uvicorn>=0.46.0",
    "weaviate>=0.1.2",
]

[tool.pyright]
extraPaths = ["."]
typeCheckingMode = "basic"

[tool.ruff]
src = ["."]
